--- a/mvc-web/src/main/webapp/WEB-INF/web.xml
+++ b/mvc-web/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,13 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
+	<listener>
+    	<listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+	</listener>
+	<context-param>
+    	<param-name>logbackConfigLocation</param-name>
+    	<param-value>classpath:logback.xml</param-value>
+	</context-param>
 	<!-- 容器整合配置 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
